manifests/apps/szurubooru/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: szurubooru
spec:
  selector:
    app: szurubooru
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
