manifests/apps/szurubooru/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: szurubooru-https
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - szurubooru.example.com
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: szurubooru
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
